<resources>
    <string name="app_name">员工管理系统</string>
    <string name="action_settings">设置</string>
    <string name="login_account">用户名</string>
    <string name="login">登 录</string>
    <string name="regist">注 册</string>
    <string name="remember_pwd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_pwd">忘记密码 ?</string>
    <string name="btn_ok">确 定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_submit">提交</string>
    <string name="btn_modify">修改</string>
    <string name="btn_next">下一步</string>
    <string name="account_hint">请输入用户名</string>
    <string name="login_phoneNo_hint">请输入手机号</string>
    <string name="login_acc_hint">请输入手机号/用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="register_age_hint">请输入年龄</string>
    <string name="current_ip">当前服务器IP</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>

    <!-- XListView -->
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松手刷新</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
</resources>
